Fixed the card placement logic. Implemented Event Handler for future attacks, ability usage for cards. Have to implement the attack card logic.